feat: add validator module and integrate into StudioManager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,34 @@
-cmake_minimum_required(VERSION 4.0)
+cmake_minimum_required(VERSION 3.10)
 
+# Define o nome do projeto.
 project(StudioYogaManager)
 
 
-set(CMAKE_CXX_STANDARD 20)
+# Define o padrão da linguagem C++ a ser utilizado (C++ 17 é recomendado).
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
+# Adiciona o diretório 'include' à lista de locais onde o compilador
+# deve procurar por arquivos de cabeçalho (.h).
 include_directories(include)
 
 
-file(GLOB_RECURSE SOURCES "src/*.cpp")
+# Encontra todos os arquivos de implementação (.cpp) recursivamente.
+# O 'GLOB_RECURSE' busca em todas as subpastas dos caminhos listados.
+file(GLOB_RECURSE SOURCES 
+    "src/models/*.cpp"
+    "src/services/*.cpp"
+    "src/data/*.cpp"
+    "src/validator/*.cpp"  # Inclui os novos arquivos de validação
+)
 
 
-add_executable(StudioManager
-        main.cpp
-        ${SOURCES}
+# Cria o executável final do projeto.
+# O nome do executável será 'StudioYogaManager'.
+# Ele será construído a partir do 'main.cpp' e de todos os arquivos
+# .cpp encontrados e armazenados na variável 'SOURCES'.
+add_executable(StudioYogaManager
+    main.cpp
+    ${SOURCES}
 )
