--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
-include_directories(include)
+include_directories(${CMAKE_SOURCE_DIR}/include)
 
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
